@@ -1,3 +1,7 @@
+* (new version)
+
+ * Now attributes are escaped only if escape is activated (Hassan Amouhzi)
+
 * 1.3.0 (2013-10-04)
 
  * Made filters modular (hason)
